# 5to-Anio

./: README.md  Usb-uart_Rs282 y SPI BMP280.c
Core/Inc/: bmp280_spi.h
Core/Src/: bmp280_spi.c  main.c
Debug/: makefile  objects.list
Debug/Core/Src/: bmp280_spi.cyclo  bmp280_spi.d  bmp280_spi.su  main.cyclo  main.d  main.su  subdir.mk
Tecnicas-Digitales-III/Tp_1/: subir_archivos.txt
Tecnicas-Digitales-III/Tp_1/Pruebas_con_bmp280+Rs285/: bmp280_spi.h  main.c
Tecnicas-Digitales-III/Tp_2/Pruebas_con_bmp280+Rs285/: bmp280_spi.c
Tecnicas-Digitales-III/Tp_2/principal/Codigo Qt/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Tecnicas-Digitales-III/Tp_2/principal/Tp2-STM32-Sistema Embebido/: .cproject  .project  Tp2-STM32-Sistema Embebido Debug.launch  Tp2-STM32-Sistema Embebido.ioc
Tecnicas-Digitales-III/Tp_2/principal/Tp2-STM32-Sistema Embebido/Core/Inc/: bmp280_spi.h
Tecnicas-Digitales-III/Tp_2/principal/Tp2-STM32-Sistema Embebido/Core/Src/: bmp280_spi.c  main.c  stm32f1xx_hal_msp.c
Tecnicas-Digitales-III/Tp_2/principal/Tp2-STM32-Sistema Embebido/Debug/: Tp2-STM32-Sistema Embebido.elf  Tp2-STM32-Sistema Embebido.list  Tp2-STM32-Sistema Embebido.map  makefile  objects.list
Tecnicas-Digitales-III/Tp_2/principal/Tp2-STM32-Sistema Embebido/Debug/Core/Src/: bmp280_spi.cyclo  bmp280_spi.d  bmp280_spi.su  freertos.d  main.cyclo  main.d  main.su  stm32f1xx_hal_msp.cyclo  stm32f1xx_hal_msp.su  stm32f1xx_it.d  subdir.mk
Tecnicas-Digitales-III/Tp_2/principal/Tp2-STM32-Sistema Embebido/Debug/Core/Startup/: subdir.mk
(+1 files in other folders)
